# bookstore

./: Dockerfile  Makefile  Procfile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
github/workflows/: build.yml  heroku-deploy.yml
order/: admin.py  apps.py  factories.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: __init.py  order.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  apps.py  factories.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_auto_20250721_1450.py
product/models/: __init__.py  category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
