[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Gustavo Farias <Gustavofarias@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^3.2.8"
djangorestframework = "^3.14.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
psycopg2-binary = "^2.9.2"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
gitpython = "^3.1.37"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"
flake8 = "^7.3.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"